--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
 
     <script src="./dist/app.bundle.js" defer></script>
+    <link rel="manifest" href="dist/manifest.json">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
